added more parsing logic for dsgc